feat: add loading state when rendering

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,7 +101,7 @@ header {
 }
 
 .overview {
-  background-color: green;
+  background-color: rgba(0, 0, 0, 0.9);
   padding: 2rem;
   position: absolute;
   left: 0;
